<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SAABNFC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_read">Read</string>
    <string name="title_activity_write">Write</string>
    <string name="title_activity_top_ten">Last ten</string>
    <string name="title_activity_read_results">Read</string>
    <string name="title_activity_write_result">Write</string>
    <string name="write_message_text">Write a message</string>
    <string name="write_to_tag_button">Write to tag</string>
    <string name="dialog_enable_nfc">NFC is not enabled</string>
    <string name="dialog_exit">Exit</string>
    <string name="dialog_settings">Settings</string>
        
    

</resources>
