<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReadResultsActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="23dp" >

        <Button
            android:id="@+id/writeSendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/writeEnterMessage"
            android:layout_centerHorizontal="true"
            android:text="@string/write_to_tag_button" />

        <EditText
            android:id="@+id/writeEnterMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/writeResult"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/write_message_text"
            android:maxLines="3" />

        <TextView
            android:id="@+id/writeResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/writeSendButton"
            android:layout_marginRight="26dp"
            android:layout_marginTop="100dp"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
         >

        <Button
            android:id="@+id/writeButton"
            style="@style/buttons"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="sendWriteMessage"
            android:text="@string/title_activity_write" />

        <Button
            android:id="@+id/last10Button"
            style="@style/buttons"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/writeButton"
            android:layout_alignBottom="@+id/writeButton"
            android:onClick="sendLastTenMessage"
            android:layout_toRightOf="@+id/writeButton"
            android:text="@string/title_activity_top_ten" />

        <Button
            android:id="@+id/readButton"
            style="@style/buttons"
            android:layout_height="wrap_content"
            android:onClick="sendReadMessage"
            android:layout_toLeftOf="@+id/writeButton"
            android:text="@string/title_activity_read" />
    </RelativeLayout>

</RelativeLayout>